# nlp-qrmine

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  README.rst  _config.yml  authors.html  changelog.html  dev-requirements.in  dev-requirements.txt  genindex.html  index.html  license.html  objects.inv  old-mkdocs.yml  py-modindex.html  pyproject.toml  qrmine.py  qrminer.py  readme.html  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  test.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: authors.doctree  changelog.doctree  index.doctree  license.doctree  readme.doctree
.doctrees/api/: modules.doctree  qrmine.doctree  qrmine.resources.doctree
.github/: auto-comment.yml  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump.yml  docs.yml  pr.yml  publish.yml  pythonpackage.yml  tox.yml
_modules/: index.html
_modules/qrmine/: cluster.html  content.html  main.html  mlqrmine.html  network.html  nlp_qrmine.html  readfiles.html  sentiment.html  utils.html  visualize.html
_sources/: readme.md.txt
_sources/api/: qrmine.resources.rst.txt  qrmine.rst.txt
_static/: alabaster.css  documentation_options.js
api/: modules.html  qrmine.html  qrmine.resources.html
docs/: Makefile  conf.py  index.html  index.md  index.rst  qrmine.ipynb
notebooks/: covid-narratives-1.ipynb  covid-narratives-2.ipynb  qualitative.ipynb  quantitative.ipynb
notes/: TODO.md  apriori.md  code.md  commandline.md  commands.md  conda.md  dependencies.md  new-process.md  notes-v4.0.md  notes.md  pip-tools.md  pypi.md  pytest.md  readthedocs.md  tox.md  transcript.txt
qrmine/: __init__.py  __main__.py  qrmine.py
src/misc/: run_sentiment.py  skeleton.py
src/misc_qrmine/: cocite.py  run_sentiment.py  sentiment.py  skeleton.py
src/ml/: nnet.py
src/ml_qrmine/: __init__.py  mlqrmine.py  nnet.py  svm.py
src/nlp_qrmine/: __init__.py  cocite.py  content.py  gtdict.py  nlp_qrmine.py  readfiles.py  run_sentiment.py  sentiment.py  skeleton.py
src/qrmine/: __init__.py  __main__.py  cluster.py  content.py  main.py  mlqrmine.py  network.py  nlp_qrmine.py  read_data.py  readfiles.py  sentiment.py  utils.py  visualize.py
src/qrmine/resources/: df_dominant_topic.csv  interview.txt  numeric.csv
tests/: conftest.py  test_nlp.py  test_num.py  test_readfiles.py  test_sentiment.py  test_skeleton.py  test_visualize.py
