[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "qrmine"
description = "Qualitative Research support tools in Python!"
classifiers = [ "Intended Audience :: Science/Research", "Development Status :: 4 - Beta", "Operating System :: OS Independent", "Programming Language :: Python :: 3.11", "Topic :: Scientific/Engineering :: Information Analysis",]
dependencies = [ "importlib-metadata; python_version<\"3.8\"", "pandas", "matplotlib", "click", "scikit-learn", "imbalanced-learn", "vaderSentiment", "xgboost", "mlxtend", "spacy", "textacy", "torch",]
dynamic = [ "version",]

[[project.authors]]
name = "beapen"
email = "github@gulfdoctor.net"

[project.license]
text = "GPL-3.0-only"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/dermatologist/nlp-qrmine"
Documentation = "https://arxiv.org/abs/2003.13519"

[project.optional-dependencies]
gpu = [ "torch[gpu]==2.1.1",]
cpu = [ "torch==2.1.1",]
testing = [ "setuptools", "pytest", "pytest-cov",]

[project.scripts]
qrmine = "qrmine.main:main_routine"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "any",]

[tool.aliases]
release = "sdist bdist_wheel upload"

[tool.flake8]
max_line_length = "88"
extend_ignore = "E203, W503"
exclude = "\n.tox\nbuild\ndist\n.eggs\ndocs/conf.py"

[tool.pyscaffold]
version = "4.6"
package = "qrmine"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "\n--verbose"
norecursedirs = [ "dist", "build", ".tox",]

[tool.distutils.bdist_wheel]
universal = 1

[tool.distutils.build_sphinx]
source-dir = "docs"
build-dir = "docs/_build"
testpaths = "tests"

[tool.devpi.upload]
no_vcs = "1"
formats = "bdist_wheel"

[tool.setuptools.packages.find]
where = [ "src",]
exclude = [ "tests",]
namespaces = true
